[tool.poetry]
name = "DDOfNH"
version = "0.1.0"
description = ""
authors = ["Yung-Jin (Joey) Hu <yungjinhu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
geonamescache = "^1.1.0"
jupyterlab = "^2"
unidecode = "^1.1.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
jupyterlab_code_formatter = "^1.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
